tests/lean/set_attr1.lean.expected.out
set_attr1.lean:14:0: error: tactic failed, there are unsolved goals
state:
n : ℕ
⊢ f n = n + 1
